# frameright

./: .gitignore  BRANDING.md  CHANGELOG.md  LICENSE.txt  MIGRATION_GUIDE.md  Makefile  README.md  ROADMAP_TO_8.md  basis.py  coverage.json  eager_lazy_demo.py  examples_new_api.py  logo-preview.html  narwhals_backend_demo.py  polars_backend_demo.py  polars_backend_lazy_demo.py  pyproject.toml  pyrightconfig.json  test_type_safety.py  type_demo.py  usage.py  usage_polars.py
.github/: copilot-instructions.md
.github/workflows/: publish.yml  tests.yml
docs/source/: api.rst  backends.rst  conf.py  examples.rst  index.rst  performance.rst  quickstart.rst
src/frameright/: __init__.py  core.py  exceptions.py
src/frameright/backends/: __init__.py  base.py  narwhals_backend.py  pandas_backend.py  polars_eager_backend.py  polars_lazy_backend.py  registry.py
src/frameright/narwhals/: __init__.py  eager.py  lazy.py
src/frameright/pandas/: __init__.py
src/frameright/polars/: __init__.py  eager.py  lazy.py
src/frameright/polars_eager/: __init__.py
src/frameright/typing/: __init__.py  narwhals.py  pandas.py  polars.py  polars_eager.py  polars_lazy.py
src/proteusframe/: __init__.py  core.py  exceptions.py  usage_polars.py
src/proteusframe/backends/: __init__.py  base.py  narwhals_backend.py  pandas_backend.py  polars_backend.py  registry.py
src/proteusframe/typing/: __init__.py  narwhals.py  pandas.py  polars.py  polars_eager.py  polars_lazy.py
src/structframe/: __init__.py  core.py  exceptions.py  typing.py
src/structframe/backends/: __init__.py  base.py  pandas_backend.py  polars_backend.py  registry.py
src/structframe/typing/: __init__.py  pandas.py  polars.py
tests/: test.py  test_coverage_additions.py  test_future_annotations.py  test_performance.py  test_polars_backend.py  test_static_typing_mypy.py  test_static_typing_pyright.py  test_structframe.py
tests/typecheck_cases/: col_types_bad.py  col_types_ok.py
