[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteusframe"
version = "0.3.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A lightweight Object-DataFrame Mapper (ODM) with runtime validation, multi-backend support (Pandas, Polars), and static type checking."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "pandera>=0.20.0",
    "typing-extensions>=4.0.0; python_version<'3.10'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
keywords = ["pandas", "polars", "dataframe", "typing", "validation", "schema", "odm", "pandera"]

[project.optional-dependencies]
polars = [
    "polars>=0.20.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "pyright>=1.1.0",
    "pandas-stubs>=2.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "genbadge[coverage]>=1.1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.23",
]

[project.urls]
Homepage = "https://github.com/yourusername/proteusframe"
Documentation = "https://proteusframe.readthedocs.io"
Repository = "https://github.com/yourusername/proteusframe"
"Bug Tracker" = "https://github.com/yourusername/proteusframe/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
proteusframe = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/proteusframe"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = [
    "pandera.*",
    "polars.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "proteusframe.backends.*",
]
# Backend implementations interact with external libraries (pandas, polars)
# that have complex/incomplete type stubs. Allow some flexibility here.
disallow_any_explicit = false
disallow_any_generics = false

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]