[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frameright"
version = "0.3.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A lightweight Object-DataFrame Mapper (ODM) with runtime validation, multi-backend support (Pandas, Polars), and static type checking."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "pandera>=0.20.0",
    "typing-extensions>=4.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
keywords = ["pandas", "polars", "dataframe", "typing", "validation", "schema", "odm", "pandera"]

[project.optional-dependencies]
polars = [
    "polars>=0.20.0",
]
narwhals = [
    "narwhals>=1.0.0",
    ]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "pyright>=1.1.0",
    "pandas-stubs>=2.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "genbadge[coverage]>=1.1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.23",
]

[project.urls]
Homepage = "https://github.com/yourusername/frameright"
Documentation = "https://frameright.readthedocs.io"
Repository = "https://github.com/yourusername/frameright"
"Bug Tracker" = "https://github.com/yourusername/frameright/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
frameright = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/frameright"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pandera.*",
    "polars.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "frameright.backends.*",
]
# Backend implementations interact with external libraries (pandas, polars)
# that have complex/incomplete type stubs. Allow some flexibility here.
disallow_any_explicit = false
disallow_any_generics = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]